Final skeleton of application

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -5,4 +5,5 @@
     <string name="research">Research</string>
     <string name="profile">Profile</string>
     <string name="archive">Archive</string>
+    <string name="call_for_doctor">Call for doctor</string>
 </resources>
