--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -13,4 +13,5 @@
     <string name="nameTextField">Name</string>
     <string name="backButtonText">Back</string>
     <string name="prompt_username">Username</string>
+    <string name="logout">LogOut</string>
 </resources>
