--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="login_failed">"Login failed"</string>
     <string name="prompt_username">Username</string>
     <string name="logout">LogOut</string>
+    <string name="password">Password</string>
+    <string name="example_email_com">example@email.com</string>
 </resources>
