--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,15 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">HospitalRegistry</string>
-    <string name="queue">Queue</string>
-    <string name="research">Research</string>
-    <string name="profile">Profile</string>
-    <string name="archive">Archive</string>
-    <string name="call_for_doctor">Call for doctor</string>
-    <string name="archiveTextField">Archive</string>
-    <string name="supportTextField">Support</string>
     <string name="settingsTextField">Settings</string>
-    <string name="services">Services</string>
     <string name="nameTextField">Name</string>
     <string name="backButtonText">Back</string>
     <string name="prompt_username">Username</string>
@@ -18,8 +10,8 @@
     <string name="example_email_com">example@email.com</string>
     <string name="home">Home</string>
     <string name="clinics">Clinics</string>
-    <string-array name="my_titles">
-        <item>You are signed up</item>
-        <item>Your analyses</item>
-    </string-array>
+    <string name="signed_in">You are signed up</string>
+    <string name="analyses">Your analyses</string>
+    <string name="call_for_doctor">Call for doctor</string>
+    <string name="profile">Profile</string>
 </resources>
