--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="Email" translatable="false">Email</string>
     <string name="successfully">Successfully</string>
     <string name="failed">Failed</string>
+    <string name="select_departament">Select Departament</string>
+    <string name="select_doctor">Select Doctor</string>
 
 
 </resources>
