--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -28,4 +28,10 @@
     <string name="failed">Failed</string>
     <string name="select_departament">Select Departament</string>
     <string name="select_doctor">Select Doctor</string>
+    <string name="login_button_text">Login</string>
+    <string name="registration_field_text">Registration</string>
+    <string name="register_button_text">Register</string>
+    <string name="make_an_appointment">Make an appointment</string>
+    <string name="need_to_login">Firstly you need to login</string>
+    <string name="select_date">Select date</string>
 </resources>
